feat: add on-demand website live viewer
